# rotms-slicer

./: .gitignore  README.md
MedImgPlan/MedImgPlanLib/: LogicMedImg.py  WidgetMedImg.py
MedImgPlan/Resources/Configs/: Config.json  figure8_coil.stl  toolpose_tiny.STL
MedImgPlan/Resources/UI/: MedImgPlan.ui
NeuralNet/: server.py
RobotControl/: RobotControl.py
RobotControl/Resources/Configs/: Config.json
RobotControl/Resources/UI/: RobotControl.ui
Simulation/: CMakeLists.txt  Loader.py  Mapper.py  Simulation.py
Simulation/SimulationLib/: Loader.py  Mapper.py
TargetVisualization/: TargetVisualization.py
TargetVisualization/Resources/Configs/: Config.json
TargetVisualization/Resources/UI/: TargetVisualization.ui
doc/: Simulation.md  environment.yml
